--- a/tests/test_scattdata/Makefile
+++ b/tests/test_scattdata/Makefile
@@ -238,11 +238,13 @@ neat:
 .PHONY: all clean neat distclean 
 
 %.o: %.F90
-	$(F90) $(F90FLAGS) -DGIT_SHA1="\"$(GIT_SHA1)\"" -c $<
+	$(F90) $(F90FLAGS) -DGIT_SHA1="\"$(GIT_SHA1)\"" -I$(SRC_DIR) -c $<
 
 #===============================================================================
 # Dependencies
 #===============================================================================
 
 include $(SRC_DIR)/DEPENDENCIES
-#test_scattdata.o: 
+test_scattdata.o: $(SRC_DIR)/ace_header.o
+test_scattdata.o: $(SRC_DIR)/ndpp_constants.o
+test_scattdata.o: $(SRC_DIR)/ndpp_scattdata_header.o
