Implemented the beginnings of code coverage checks to the make files.

--- a/src/Makefile
+++ b/src/Makefile
@@ -19,6 +19,7 @@ include OBJECTS
 COMPILER = gnu
 DEBUG    = no
 PROFILE  = no
+CODECOV  = no
 OPTIMIZE = no
 MPI      = no
 HDF5     = no
@@ -56,7 +57,7 @@ ifeq ($(COMPILER),gnu)
 
   # Profiling
   ifeq ($(PROFILE),yes)
-    F90FLAGS += -pg
+    F90FLAGS += -pg 
     LDFLAGS  += -pg
   endif
 
@@ -83,8 +84,14 @@ ifeq ($(COMPILER),intel)
 
   # Profiling
   ifeq ($(PROFILE),yes)
-    F90FLAGS += -pg
-    LDFLAGS  += -pg
+    F90FLAGS += -pg -prof-gen:srcpos
+    LDFLAGS  += -pg -prof-gen:srcpos
+  endif
+  
+  # Code-Coverage
+  ifeq ($(CODECOV),yes)
+    F90FLAGS += -pg -prof-gen=srcpos
+    LDFLAGS  += -pg -prof-gen=srcpos
   endif
 
   # Optimization
@@ -239,9 +246,12 @@ uninstall:
 	@rm $(DESTDIR)$(prefix)/bin/$(program)
 	@rm $(DESTDIR)$(prefix)/share/man/man1/ndpp.1
 	@rm $(DESTDIR)$(prefix)/share/doc/$(program)/copyright
-distclean: clean
+distclean: covclean
 	cd xml-fortran; make clean
 	cd templates; make clean
+covclean:
+	@rm -rf CodeCoverage *.dyn gmon.out pgopti* *.HTML
+	@rm -f *.o *.mod $(program)
 clean:
 	@rm -f *.o *.mod $(program)
 neat:
@@ -252,7 +262,7 @@ neat:
 #===============================================================================
 
 .SUFFIXES: .F90 .o
-.PHONY: all xml-fortran install uninstall clean neat distclean 
+.PHONY: all xml-fortran install uninstall covclean clean neat distclean 
 
 %.o: %.F90
 	$(F90) $(F90FLAGS) -DGIT_SHA1="\"$(GIT_SHA1)\"" -Ixml-fortran -Itemplates -c $<
