--- a/tests/test_scattdata/Makefile
+++ b/tests/test_scattdata/Makefile
@@ -112,7 +112,7 @@ ifeq ($(COMPILER),intel)
 
   # Optimization
   ifeq ($(OPTIMIZE),yes)
-    F90FLAGS += -O3 -ipo
+    F90FLAGS += -O3
   endif
 endif
 
