Updated test_scattdata to work with the revised ndpp code.

--- a/tests/test_scattdata/Makefile
+++ b/tests/test_scattdata/Makefile
@@ -9,6 +9,7 @@ SRC_DIR = ../../src
 objects = \
 $(SRC_DIR)/ndpp_scattdata_header.o \
 $(SRC_DIR)/ace_header.o \
+$(SRC_DIR)/endf.o \
 $(SRC_DIR)/endf_header.o \
 $(SRC_DIR)/ndpp_constants.o \
 $(SRC_DIR)/dict_header.o \
