--- a/tests/test_scatt/Makefile
+++ b/tests/test_scatt/Makefile
@@ -31,6 +31,7 @@ COMPILER = gnu
 DEBUG    = no
 PROFILE  = no
 OPTIMIZE = no
+OPENMP   = no
 MPI      = no
 HDF5     = no
 
@@ -124,6 +125,21 @@ endif
   #~ F90 = $(MPI_DIR)/bin/mpif90
   #~ F90FLAGS += -DMPI
 #~ endif
+
+# OpenMP for shared-memory parallelism
+
+ifeq ($(OPENMP),yes)
+	ifeq ($(COMPILER),intel)
+    F90FLAGS += -openmp -DOPENMP
+    LDFLAGS += -openmp
+	endif
+
+	ifeq ($(COMPILER),gnu)
+    F90FLAGS += -fopenmp -DOPENMP
+    LDFLAGS += -fopenmp
+	endif
+endif
+
 #~ 
 #~ # HDF5 for I/O
 #~ 
