Added NATIVE to makefile; allows mtune=native and march=native, and ipo on intel.

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,6 +20,7 @@ COMPILER = gnu
 DEBUG    = no
 PROFILE  = no
 OPTIMIZE = no
+NATIVE   = no
 OPENMP   = no
 MPI      = no
 HDF5     = no
@@ -57,13 +58,18 @@ ifeq ($(COMPILER),gnu)
 
   # Profiling
   ifeq ($(PROFILE),yes)
-    F90FLAGS += -pg 
+    F90FLAGS += -pg
     LDFLAGS  += -pg
   endif
 
   # Optimization
   ifeq ($(OPTIMIZE),yes)
-    F90FLAGS += -O3 
+    F90FLAGS += -O3
+  endif
+
+  # Native machine compilarion
+  ifeq ($(NATIVE), yes)
+  	F90FLAGS += -march=native -mtune=native
   endif
 endif
 
@@ -91,6 +97,11 @@ ifeq ($(COMPILER),intel)
   # Optimization
   ifeq ($(OPTIMIZE),yes)
     F90FLAGS += -O3
+  endif
+
+  # Native machine compilarion
+  ifeq ($(NATIVE), yes)
+  	F90FLAGS += -xHost -march=native -mtune=native -ipo
   endif
 endif
 
@@ -163,7 +174,7 @@ neat:
 #===============================================================================
 
 .SUFFIXES: .F90 .o
-.PHONY: all xml-fortran tests install uninstall clean neat distclean 
+.PHONY: all xml-fortran tests install uninstall clean neat distclean
 
 %.o: %.F90
 	$(F90) $(F90FLAGS) -DGIT_SHA1="\"$(GIT_SHA1)\"" -Ixml-fortran -Itemplates -c $<
